# postgis

./: .env  .gitattributes  Cargo.toml  README.md
benches/: geo_contains.rs
examples/: gdal_read_write.rs  opencv_face_detection.rs  opencv_geom.rs  opencv_text_detection.rs
examples/tf_mnist/: create_model.py  main.rs
examples/tf_mobilenet_v3/: create_model.py  main.rs
migrations/: 20211121171455_create_point2d_table.sql  20211123164728_create_populate_geometries_table.sql
scripts/: download_data.sh  host_init_db.sh  init_geo_db.sh  restore_nyc_db.sh
src/: lib.rs  main.rs
tests/: geo_algo.rs  parse_wkt.rs
tests/data/: GeometryCollection.wkt  MultiLineString.wkt  MultiPolygon1.wkt  MultiPolygon2.wkt
