[package]
name = "postgis"
authors = ["Denis Deniz González <denis2.glez@gmail.com>"]
license = "MIT"
repository = "https://github.com/denis2glez/postgis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgis = "0.9.0"
geozero = { version = "0.7.7", features = ["with-postgis-sqlx"] }
tokio = { version = "1.14.0", features = ["full"] }

[dependencies.sqlx]
version = "0.5.9"
default-features = false
features = [
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline",
    "runtime-tokio-native-tls",
]

[dev-dependencies]
geo = "0.18.0"
