[package]
name = "post-gis"
authors = ["Denis Deniz González <denis2.glez@gmail.com>"]
license = "MIT"
repository = "https://github.com/denis2glez/postgis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgis = "0.9.0"
geo = "0.18.0"
geos = "8.0.3"
geojson = "0.22.2"
geo-types = { version = "0.7.2", default-features = false }
tokio = { version = "1.15.0", features = ["full"] }
flatgeobuf = "0.6.2"
seek_bufread = "1.2.2"
dotenv = "0.15.0"
serde = "1.0.133"
anyhow = "1.0.52"
glob = "0.3.0"

[dependencies.geozero]
version = "0.8.0"
features = [
    "with-geo",
    "with-geojson",
    "with-geos",
    "with-gpkg",
    "with-postgis-sqlx",
    "with-postgis-postgres",
]

[dependencies.sqlx]
version = "0.5.10"
default-features = false
features = [
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline",
    "runtime-tokio-native-tls",
]

[dev-dependencies]
geo = "0.18.0"
wkt = "0.9.2"
opencv = "0.61.3"
tensorflow = { version = "0.17.0", features = ["tensorflow_gpu"] }
image = "0.23.14"
gdal = { git = "https://github.com/georust/gdal" }

[dev-dependencies.criterion]
version = "0.3.5"
features = ["html_reports", "async_tokio"]

[[bench]]
name = "geo_contains"
harness = false
